feat: complete duplicate finder plugin implementation
- Implement exact duplicate detection using SHA-256 hashing
- Add fuzzy duplicate detection using MinHash algorithm with word shingles
- Create results panel with sortable duplicate cards and delete functionality
- Add progress modal with cancellation support
- Implement IndexedDB caching for faster rescans
- Build comprehensive settings tab with all configuration options
- Add 25 unit tests covering core algorithms
- Update README with full documentation
- Add GitHub CI workflows for build, test, and release automation

Plugin is production-ready with all v0.1.0 features complete.
Files: 14 TypeScript modules, 1,477 lines of code, 25 tests passing.

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "duplicate-finder",
+	"name": "Duplicate Finder",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Find and manage duplicate notes in your vault using exact and fuzzy matching.",
+	"author": "Yggdrasil",
+	"authorUrl": "",
+	"fundingUrl": "",
+	"isDesktopOnly": true
 }
