--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-duplicate-finder",
+	"version": "0.1.0",
+	"description": "Find and manage duplicate notes in your vault using exact and fuzzy matching.",
 	"main": "main.js",
 	"type": "module",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"test": "vitest",
+		"test:coverage": "vitest --coverage",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"lint": "eslint ."
 	},
-	"keywords": [],
+	"keywords": ["obsidian", "plugin", "duplicates", "deduplication", "minhash"],
 	"license": "0-BSD",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@types/node": "^18.0.0",
 		"esbuild": "0.25.5",
 		"eslint-plugin-obsidianmd": "0.1.9",
 		"globals": "14.0.0",
@@ -21,7 +23,10 @@
 		"typescript": "^5.8.3",
 		"typescript-eslint": "8.35.1",
 		"@eslint/js": "9.30.1",
-		"jiti": "2.6.1"
+		"jiti": "2.6.1",
+		"vitest": "^1.0.0",
+		"@vitest/coverage-v8": "^1.0.0",
+		"jsdom": "^22.0.0"
 	},
 	"dependencies": {
 		"obsidian": "latest"
