Prepare for v0.2.0 submission: synchronize versions and add author URL
- Update package.json version to match manifest.json (0.2.0)
- Update versions.json to map current version to minAppVersion
- Add authorUrl to manifest.json for community trust
- Remove empty fundingUrl field for cleaner manifest

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,6 @@
 	"minAppVersion": "0.15.0",
 	"description": "Find and manage duplicate notes in your vault using exact and fuzzy matching.",
 	"author": "Yggdrasil",
-	"authorUrl": "",
-	"fundingUrl": "",
+	"authorUrl": "https://github.com/wilbeibi",
 	"isDesktopOnly": true
 }
