--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ data.json
 
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
+
+# Temporary local exclusions
+docs/
+openspec/
+.opencode/
